Getting Themes from GlobalGiving API

--- a/.gitignore
+++ b/.gitignore
@@ -887,3 +887,7 @@ DerivedData/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+
+### Sensitive data
+/lib/data/global_giving_api_key.dart
