--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: 0.12.0+1
   get_it: 1.0.3
   rxdart: 0.21.0
+  shimmer: 1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +38,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/placeholder.png
+    - assets/images/placeholder.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
