--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/placeholder.png
+    - assets/images/placeholder.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
