--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   get_it: 1.0.3
   rxdart: 0.21.0
   shimmer: 1.0.0
+  carousel_slider: ^1.3.0
 
 dev_dependencies:
   flutter_test:
