--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   rxdart: 0.21.0
   shimmer: 1.0.0
   carousel_slider: ^1.3.0
+  flutter_spinkit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
