--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shimmer: 1.0.0
   carousel_slider: ^1.3.0
   flutter_spinkit: ^3.1.0
+  auto_size_text: 1.1.2
 
 dev_dependencies:
   flutter_test:
