--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ flutter:
   assets:
     - assets/images/placeholder.jpg
 
+  fonts:
+    - family: iconmoon
+      fonts:
+        - asset: assets/icons/icomoon.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
