--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   carousel_slider: ^1.3.0
   flutter_spinkit: ^3.1.0
   auto_size_text: 1.1.2
+  expandable: 2.1.1
 
 dev_dependencies:
   flutter_test:
