--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_spinkit: ^3.1.0
   auto_size_text: 1.1.2
   expandable: 2.1.1
+  percent_indicator: 1.0.16
 
 dev_dependencies:
   flutter_test:
