--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   auto_size_text: 1.1.2
   expandable: 2.1.1
   percent_indicator: 1.0.16
+  intl: 0.15.8
 
 dev_dependencies:
   flutter_test:
